--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header class="navbar-container">
 
         <nav class="nav-links">
-            <div class="nav-item">Contato</div>
-            <div class="nav-item">Sobre Nós</div>
+            <div class="nav-item"><a href="contato.html"><strong>Contato</strong></a></div>
+            <div class="nav-item"><a href="sobre.html"><strong>Sobre nós</strong></a></div>
         </nav>
 
         <img class="logo" src="./assets/images/logo1.jpeg"></div>
