correção do login

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="content-box text-box">
-                <p>Para acessar suas informações financeiras, faça login inserindo suas informações abaixo.</p>
+                <p>Para acessar suas informações financeiras, faça login inserindo seus dados abaixo.</p>
             </div>
 
             <form class="form-section">
