--- a/assets/HTML/sobre.html
+++ b/assets/HTML/sobre.html
@@ -3,9 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <title>Sobre nós</title>
+    <link rel="stylesheet" href="../CSS/styleOtherPages.css">
+    <link rel="icon" href="../images/logo4NoBg.png">
+    <!-- Google Fonts - Inter -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+
+        <div class="container">
+            <h1>Sobre Nós</h1>
+            <nav>
+                <ul>
+                    <li><a href="#mission">Nosso Compromisso</a></li>
+                    <li><a href="#team">Nossos Trabalhadores</a></li>
+                    <li><a href="#history">Nossa História</a></li>
+                    <li><a href="../HTML/contato.html">Contate-nos</a></li>
+                </ul>
+
+                <div id="botaoVoltarLogin">
+                    <a href="../../index.html">Voltar</a>
+                </div>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section id="mission">
+            <h2>Nosso Compromisso</h2>
+            <p>IR Agro - é uma empresa composta por consultores com sólida experiência de campo nos setores de agricultura, bovinocultura leiteira, suinocultura e avicultura  que buscam estreitar a distância entre o homem do campo e suas obrigações junto ao Fisco, levando orientação e conhecimento para auxiliá-lo no planejamento tributário e financeiro da sua propriedade rural.</p>
+            <p>Dessa forma, objetiva-se uma maior rentabilidade financeira da propriedade bem como a conformidade com suas obrigações tributárias, preparando-o para as mudanças que o afetam diariamente.</p>
+        </section>
+
+        <section id="team">
+            <h2>Nossos Trabalhadores</h2>
+            <p>A empresa foi formada através do nosso núcleo familiar, originada da visão que contempla os membros familiares como nossos melhores amigos de todo tempo, e totalmente confiáveis.</p>
+            <p>Cada um dos participantes contribui de sua própria forma para a expansão e evolução do corporativo, todos trabalhando num ambiente colaborativo e amigável. Os integrantes principais são:</p>
+            <div class="team-members">
+                <!-- Example team member cards (can be expanded) -->
+                <div class="member-card">
+                    <figure>
+                        <img src="" alt="Juliano">
+                    </figure>
+                        <h3>Juliano Thomé</h3>
+                    <p>Fundador e Líder de Marketing</p>
+                    <p>Juliano é o cabeça chefe da empresa, responsável pela busca de clientes e lida direta com os mesmos no campo, planejamento financeiro, tributário e fiscal dos produtores rurais.</p>
+                </div>
+                <div class="member-card">
+                    <figure>
+                        <img src="../images/andreia.jpg" alt="Andréia">
+                    </figure>
+                    <h3>Andréia Thomé</h3>
+                    <p>Líder do Escritório</p>
+                    <p>Andréia é a coordenadora da parte técnica, preenche as declarações de imposto de rende, lança juros no sistema, emite boletos, e cuida de toda a papelada.</p>
+                </div>
+                <div class="member-card">
+                    <figure>
+                        <img src="../images/murilo.jpg" alt="Murilo">
+                    </figure>
+                    <h3>Murilo Thomé</h3>
+                    <p>Programador</p>
+                    <p>Murilo é o desenvolvedor do site da empresa, que redireciona os clientes através de um sistema de login para uma página com suas informações financeiras.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="history">
+            <h2>Nossa História</h2>
+            <p>Fundados no ano de 2022, nascemos da necessidade dos nossos clientes de possuir um gerenciamento mais detalhado de suas movimentações financeiras e aspectos fiscais.</p>
+            <p>Hoje em dia, oferecemos um serviço da qual o nicho rural é extremamente carente, e auxiliamos nossos consumidores diariamente com diversas questões, desde a emissão de notas fiscais, revisão financeira e planejamento futuro com muita parceria e união!</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy;IrAgro, Todos os direitos reservados (ou não).</p>
+    </footer>
 </body>
 </html>
