--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IR Agro</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css">
-    <link rel="icon" href="./assets/images/logo4.jpeg">
+    <link rel="stylesheet" href="./assets/CSS/styleIndex.css">
+    <link rel="icon" href="./assets/images/logo4NoBg.png">
     <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- mascara de inputs -->
@@ -50,6 +50,7 @@
             <p>Endereço: Nonoai, Rua Orelho Estevão Fontana, 1180</p>
             <p>Telefone: <span>+55 54 8118-1700</span></p>
         </div>
+        <p>&copy;IrAgro, Todos os direitos reservados (ou não).</p>
     </footer>
 
     <script src="./assets/scripts/scriptIndex.js" defer></script>
