--- a/assets/HTML/contato.html
+++ b/assets/HTML/contato.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <link rel="icon" href="../images/logo4NoBg.png">
+    <link rel="stylesheet" href="../CSS/styleOtherPages.css">
+    <title>Contato</title>
 </head>
-<body>
-    
-</body>
+    <body>
+        
+    </body>
 </html>
