--- a/assets/HTML/contato.html
+++ b/assets/HTML/contato.html
@@ -4,10 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../images/logo4NoBg.png">
-    <link rel="stylesheet" href="../CSS/styleOtherPages.css">
     <title>Contato</title>
+    <!-- Link to the shared CSS file -->
+    <link rel="stylesheet" href="../CSS/styleOtherPages.css">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-    <body>
-        
-    </body>
+<body>
+    <header>
+        <div class="container">
+            <h1>Contato</h1>
+            <nav>
+                <ul>
+                    <div id="botaoVoltarLogin">
+                        <a href="../../index.html">Voltar</a>
+                    </div>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <h2 style="text-align: center; margin-bottom: 1rem; margin-top: 1rem; color:#13802b; font-weight: 600;">Pessoal</h2>
+
+    <main class="mainContato">     
+        <div class="contact-card">
+                <div class="icon-container">    
+                    <a href="https://www.instagram.com/muristop10"><img src="../images/instaLogo.png"></img></a>
+                </div>
+            <h3>Instagram</h3>
+            <p><a href="https://www.instagram.com/muristop10" target="_blank">@muristop10</a></p>
+        </div>
+
+        <div class="contact-card">
+                <div class="icon-container">
+                    <a href="mailto:muristop@gmail.com"><img src="../images/gmaillogo.jpeg"></img></a>
+                </div>
+            <h3>Email</h3>
+            <p><a href="mailto:muristop@gmail.com">muristop@gmail.com</a></p>
+        </div>
+
+        <div class="contact-card">
+                <div class="icon-container">
+                    <a href="https://www.linkedin.com/in/juliano-manoel-thom%C3%A9-32700b92?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><img src="../images/linkLogo.png"></img></a>
+                </div>
+            <h3>LinkedIn</h3>
+            <p><a href="https://www.linkedin.com/in/juliano-manoel-thom%C3%A9-32700b92?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Juliano Thomé</a></p>
+        </div>
+    </main>
+
+    <h2 style="text-align: center; margin-bottom: 1rem; margin-top: 1rem; color:#13802b; font-weight: 600;">Profissional</h2>
+    <main class="mainContato">
+        <div class="contact-card">
+                <div class="icon-container">    
+                    <a href="https://www.instagram.com/iragro.gestao/"><img src="../images/instaLogo.png"></img></a>
+                </div>
+            <h3>Instagram</h3>
+            <p><a href="https://www.instagram.com/iragro.gestao/" target="_blank">@iragro.gestao</a></p>
+        </div>
+
+        <div class="contact-card">
+                <div class="icon-container">    
+                    <a href="https://www.facebook.com/share/19MMZmZcAS/"><img src="../images/faceLogo.png"></img></a>
+                </div>
+            <h3>Facebook</h3>
+            <p><a href="https://www.facebook.com/share/19MMZmZcAS/" target="_blank">I.R. agro</a></p>
+        </div>
+
+        <div class="contact-card">
+                <div class="icon-container">
+                    <a href="mailto:iragro.gestao@gmail.com"><img src="../images/gmaillogo.jpeg"></img></a>
+                </div>
+            <h3>Email</h3>
+            <p><a href="mailto:iragro.gestao@gmail.com">iragro.gestao@gmail.com</a></p>
+        </div>
+
+    </main>
+
+    <footer>
+        <p>&copy;IrAgro, Todos os direitos reservados (ou não).</p>
+    </footer>
+    
+</body>
 </html>
