--- a/assets/HTML/sobre.html
+++ b/assets/HTML/sobre.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <header>
-
         <div class="container">
             <h1>Sobre Nós</h1>
             <nav>
@@ -44,7 +43,7 @@
                 <!-- Example team member cards (can be expanded) -->
                 <div class="member-card">
                     <figure>
-                        <img src="" alt="Juliano">
+                        <img src="../images/juliano.jpg" alt="Juliano">
                     </figure>
                         <h3>Juliano Thomé</h3>
                     <p>Fundador e Líder de Marketing</p>
@@ -65,6 +64,14 @@
                     <h3>Murilo Thomé</h3>
                     <p>Programador</p>
                     <p>Murilo é o desenvolvedor do site da empresa, que redireciona os clientes através de um sistema de login para uma página com suas informações financeiras.</p>
+                </div>
+                <div class="member-card">
+                    <figure>
+                        <img src="../images/karolina.jpg" alt="Karolina">
+                    </figure>
+                    <h3>Karolina Thomé</h3>
+                    <p>Mídias Sociais</p>
+                    <p>Karolina é a encarregada de cuidar das postagens realizadas nas redes da empresa. Ela faz o trabalho de coordenar a edição, preparação e publicação das imagens.</p>
                 </div>
             </div>
         </section>
