--- a/assets/HTML/painel.html
+++ b/assets/HTML/painel.html
@@ -8,6 +8,25 @@
     <title>Painel</title>
 </head>
     <body>
+
+        <header>
+            <h1>Painel de informações</h1>
+            <div class="container">
+                <nav>
+                    <ul>
+                        <div id="botaoVoltarLogin">
+                            <a href="../../index.html">Voltar</a>
+                        </div>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+
+
+        <footer>
+            <p>&copy;IrAgro, Todos os direitos reservados (ou não).</p>
+        </footer>
         
     </body>
 </html>
