--- a/assets/HTML/painel.html
+++ b/assets/HTML/painel.html
@@ -15,18 +15,22 @@
                 <nav>
                     <ul>
                         <div id="botaoVoltarLogin">
-                            <a href="../../index.html">Voltar</a>
+                            <a href="../../index.html">Sair da Conta</a>
                         </div>
                     </ul>
                 </nav>
             </div>
         </header>
 
+        <h1 id="tituloNome"></h1>
+
 
 
         <footer>
             <p>&copy;IrAgro, Todos os direitos reservados (ou não).</p>
         </footer>
+
+        <script src="../scripts/scriptPainel.js" defer></script>
         
     </body>
 </html>
