--- a/assets/HTML/contato.html
+++ b/assets/HTML/contato.html
@@ -29,7 +29,7 @@
     <main class="mainContato">     
         <div class="contact-card">
                 <div class="icon-container">    
-                    <a href="https://www.instagram.com/muristop10"><img src="../images/instaLogo.png"></img></a>
+                    <a href="https://www.instagram.com/muristop10"><img src="../images/instalogo.png"></img></a>
                 </div>
             <h3>Instagram</h3>
             <p><a href="https://www.instagram.com/muristop10" target="_blank">@muristop10</a></p>
@@ -56,7 +56,7 @@
     <main class="mainContato">
         <div class="contact-card">
                 <div class="icon-container">    
-                    <a href="https://www.instagram.com/iragro.gestao/"><img src="../images/instaLogo.png"></img></a>
+                    <a href="https://www.instagram.com/iragro.gestao/"><img src="../images/instalogo.png"></img></a>
                 </div>
             <h3>Instagram</h3>
             <p><a href="https://www.instagram.com/iragro.gestao/" target="_blank">@iragro.gestao</a></p>
